--- a/public/404.html
+++ b/public/404.html
@@ -2,11 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Redirecting...</title>
+    <title>Limey</title>
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
+      // MIT License
       // https://github.com/rafgraph/spa-github-pages
       var pathSegmentsToKeep = 1;
+
       var l = window.location;
       l.replace(
         l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
