modified:   src/components/AutoPlayVideo.tsx 	modified:   src/components/VideoPlayer.tsx 	modified:   src/pages/Boost.tsx 	modified:   src/pages/CampaignDetail.tsx 	modified:   src/pages/CreateVideoPage.tsx 	modified:   src/pages/Feed.tsx modified:   src/pages/Friends.tsx 	modified:   src/pages/Upload.tsx

--- a/index.html
+++ b/index.html
@@ -55,6 +55,19 @@
           Android.openImageGallery();
         }
       }
+
+      // Additional functions for other buttons
+      function onChangeFileClick() {
+        if (typeof Android !== 'undefined' && Android.openVideoGallery) {
+          Android.openVideoGallery();
+        }
+      }
+
+      function onChooseCoverImageClick() {
+        if (typeof Android !== 'undefined' && Android.openImageGallery) {
+          Android.openImageGallery();
+        }
+      }
     </script>
   </head>
 
